...
    }
    
    @ViewBuilder
    func headerView() -> some View {
        VStack {
            HStack {
                TextField("Enter the count of vehicles to fetch", text: $viewModel.fetchCount)
                    .keyboardType(.numberPad)
                    .onChange(of: viewModel.fetchCount) { _ in
                        viewModel.validate()
                    }
                    .textFieldStyle(.roundedBorder)
                
                Button("Get") {
                    Task {
                        await viewModel.fetchVehicles()
                    }
                }
                .buttonStyle(.bordered)
                .disabled(!viewModel.canFetch)
...
