...

import Foundation
import SwiftUI

class VehicleListViewModel: ObservableObject {
    let client: RideClientProtocol
    let errorMessage = "Please enter a value between 1 and 100"
    
    @Published var vehicles: [Vehicle] = []
    @Published var fetchCount: String = ""
    //Default sort by vin
    @Published var currentSort = Vehicle.SortKeys.vin
    @Published var selectedVehicleId: Int?
...
